<resources>
    <string name="app_name">DoingObject</string>
    <string name="setting">설정</string>
    <string name="appbar_text">이벤트 추첨기</string>
    <string name="count">수량</string>
    <string name="details">상세 설명</string>
    <string name="uploadImage">이미지 업로드</string>
    <string name="product_name">경품 명</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="previous">이전</string>
    <string name="add_item">항목 추가</string>
    <string name="submit">입력 완료</string>
    <string name="num_of_ticket">응모권 수량</string>
    <string name="insert_num">응모권 수량 입력</string>
    <string name="insert_ID">응모인 ID:</string>
</resources>