<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/productName"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@color/back_yel"
        android:gravity="center"
        android:hint="@string/product_name"
        android:textColor="#AD1457"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/productDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="wrap"
        tools:text="경품" />

    <EditText
        android:id="@+id/productDescription"
        android:layout_width="225dp"
        android:layout_height="60dp"
        android:hint="@string/details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/productQuantity"
        app:layout_constraintStart_toEndOf="@+id/productName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_default="wrap"
        tools:text="상세 설명" />

    <EditText
        android:id="@+id/productQuantity"
        android:layout_width="62dp"
        android:layout_height="60dp"
        android:hint="@string/count"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/productDescription"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:text="1" />

</androidx.constraintlayout.widget.ConstraintLayout>
